340/parser.output
State 109 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmtlist
    2        | /* empty */

    3 stmtlist: stmtlist stmt
    4         | stmt

    5 stmt: expr SEMICOLON
    6     | ifstmt
    7     | whilestmt
    8     | forstmt
    9     | returnstmt
   10     | breakstmt
   11     | continuestmt
   12     | block
   13     | funcdef
   14     | SEMICOLON

   15 breakstmt: BREAK SEMICOLON

   16 continuestmt: CONT SEMICOLON

   17 returnstmt: RETURN expr SEMICOLON
   18           | RETURN SEMICOLON

   19 assignexpr: lvalue EQUAL expr

   20 arithmexpr: expr PLUS expr
   21           | expr MINUS expr
   22           | expr STAR expr
   23           | expr SLASH expr
   24           | expr PERC expr

   25 relexpr: expr GREATER expr
   26        | expr GREQ expr
   27        | expr LESS expr
   28        | expr LEQ expr
   29        | expr EQ_EQ expr
   30        | expr NEQ expr

   31 @1: /* empty */

   32 boolexpr: expr OR @1 M expr

   33 @2: /* empty */

   34 boolexpr: expr AND @2 M expr

   35 expr: assignexpr
   36     | term
   37     | arithmexpr
   38     | relexpr
   39     | boolexpr

   40 term: PARENTH_L expr PARENTH_R
   41     | MINUS expr
   42     | NOT expr
   43     | PLUS_PLUS lvalue
   44     | lvalue PLUS_PLUS
   45     | MINUS_MINUS lvalue
   46     | lvalue MINUS_MINUS
   47     | primary

   48 primary: lvalue
   49        | call
   50        | tablemake
   51        | PARENTH_L funcdef PARENTH_R
   52        | const

   53 lvalue: ID
   54       | LOCAL ID
   55       | DOUBLE_COLON ID
   56       | member

   57 member: lvalue DOT ID
   58       | lvalue BRACKET_L expr BRACKET_R
   59       | call DOT ID
   60       | call BRACKET_L expr BRACKET_R

   61 call: call PARENTH_L elist PARENTH_R
   62     | PARENTH_L funcdef PARENTH_R PARENTH_L elist PARENTH_R
   63     | lvalue callsuffix

   64 callsuffix: normcall
   65           | methodcall

   66 normcall: PARENTH_L elist PARENTH_R

   67 methodcall: DOT_DOT ID PARENTH_L elist PARENTH_R

   68 elist: /* empty */
   69      | expr
   70      | elist COMMA expr

   71 tablemake: BRACKET_L elist BRACKET_R
   72          | BRACKET_L indexed BRACKET_R

   73 indexed: indexedelem
   74        | indexed COMMA indexedelem

   75 indexedelem: BRACE_L expr COLON expr BRACE_R

   76 @3: /* empty */

   77 block: BRACE_L @3 stmtlist BRACE_R
   78      | BRACE_L BRACE_R

   79 funcname: ID
   80         | /* empty */

   81 funcprefix: FUNCTION funcname

   82 idlist: /* empty */
   83       | ID
   84       | idlist COMMA ID

   85 funcargs: PARENTH_L idlist PARENTH_R

   86 funcblockstart: /* empty */

   87 funcblockend: /* empty */

   88 funcbody: funcblockstart block funcblockend

   89 funcdef: funcprefix funcargs funcbody

   90 number: REAL
   91       | INT

   92 const: STRING
   93      | number
   94      | TRUE
   95      | FALSE
   96      | NIL

   97 ifprefix: IF PARENTH_L expr PARENTH_R

   98 elseprefix: ELSE

   99 ifstmt: ifprefix stmt
  100       | ifprefix stmt elseprefix stmt

  101 loopstart: /* empty */

  102 loopend: /* empty */

  103 loopstmt: loopstart stmt loopend

  104 whilestart: WHILE

  105 whilecond: PARENTH_L expr PARENTH_R

  106 whilestmt: whilestart whilecond loopstmt

  107 N: /* empty */

  108 M: /* empty */

  109 forprefix: FOR PARENTH_L elist SEMICOLON M expr SEMICOLON

  110 forstmt: forprefix N elist PARENTH_R N loopstmt N


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 97
ELSE (259) 98
WHILE (260) 104
FOR (261) 109
FUNCTION (262) 81
BREAK (263) 15
CONT (264) 16
RETURN (265) 17 18
AND (266) 34
NOT (267) 42
OR (268) 32
LOCAL (269) 54
TRUE (270) 94
FALSE (271) 95
NIL (272) 96
EQUAL (273) 19
PLUS (274) 20
MINUS (275) 21 41
STAR (276) 22
SLASH (277) 23
PERC (278) 24
EQ_EQ (279) 29
NEQ (280) 30
PLUS_PLUS (281) 43 44
MINUS_MINUS (282) 45 46
GREATER (283) 25
LESS (284) 27
GREQ (285) 26
LEQ (286) 28
BRACE_L (287) 75 77 78
BRACE_R (288) 75 77 78
BRACKET_L (289) 58 60 71 72
BRACKET_R (290) 58 60 71 72
PARENTH_L (291) 40 51 61 62 66 67 85 97 105 109
PARENTH_R (292) 40 51 61 62 66 67 85 97 105 110
SEMICOLON (293) 5 14 15 16 17 18 109
COMMA (294) 70 74 84
COLON (295) 75
DOUBLE_COLON (296) 55
DOT (297) 57 59
DOT_DOT (298) 67
INT (299) 91
REAL (300) 90
ID (301) 53 54 55 57 59 67 79 83 84
STRING (302) 92
UMINUS (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0
stmtlist (51)
    on left: 3 4, on right: 1 3 77
stmt (52)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 3 4 99 100 103
breakstmt (53)
    on left: 15, on right: 10
continuestmt (54)
    on left: 16, on right: 11
returnstmt (55)
    on left: 17 18, on right: 9
assignexpr (56)
    on left: 19, on right: 35
arithmexpr (57)
    on left: 20 21 22 23 24, on right: 37
relexpr (58)
    on left: 25 26 27 28 29 30, on right: 38
boolexpr (59)
    on left: 32 34, on right: 39
@1 (60)
    on left: 31, on right: 32
@2 (61)
    on left: 33, on right: 34
expr (62)
    on left: 35 36 37 38 39, on right: 5 17 19 20 21 22 23 24 25 26
    27 28 29 30 32 34 40 41 42 58 60 69 70 75 97 105 109
term (63)
    on left: 40 41 42 43 44 45 46 47, on right: 36
primary (64)
    on left: 48 49 50 51 52, on right: 47
lvalue (65)
    on left: 53 54 55 56, on right: 19 43 44 45 46 48 57 58 63
member (66)
    on left: 57 58 59 60, on right: 56
call (67)
    on left: 61 62 63, on right: 49 59 60 61
callsuffix (68)
    on left: 64 65, on right: 63
normcall (69)
    on left: 66, on right: 64
methodcall (70)
    on left: 67, on right: 65
elist (71)
    on left: 68 69 70, on right: 61 62 66 67 70 71 109 110
tablemake (72)
    on left: 71 72, on right: 50
indexed (73)
    on left: 73 74, on right: 72 74
indexedelem (74)
    on left: 75, on right: 73 74
block (75)
    on left: 77 78, on right: 12 88
@3 (76)
    on left: 76, on right: 77
funcname (77)
    on left: 79 80, on right: 81
funcprefix (78)
    on left: 81, on right: 89
idlist (79)
    on left: 82 83 84, on right: 84 85
funcargs (80)
    on left: 85, on right: 89
funcblockstart (81)
    on left: 86, on right: 88
funcblockend (82)
    on left: 87, on right: 88
funcbody (83)
    on left: 88, on right: 89
funcdef (84)
    on left: 89, on right: 13 51 62
number (85)
    on left: 90 91, on right: 93
const (86)
    on left: 92 93 94 95 96, on right: 52
ifprefix (87)
    on left: 97, on right: 99 100
elseprefix (88)
    on left: 98, on right: 100
ifstmt (89)
    on left: 99 100, on right: 6
loopstart (90)
    on left: 101, on right: 103
loopend (91)
    on left: 102, on right: 103
loopstmt (92)
    on left: 103, on right: 106 110
whilestart (93)
    on left: 104, on right: 106
whilecond (94)
    on left: 105, on right: 106
whilestmt (95)
    on left: 106, on right: 7
N (96)
    on left: 107, on right: 110
M (97)
    on left: 108, on right: 32 34 109
forprefix (98)
    on left: 109, on right: 110
forstmt (99)
    on left: 110, on right: 8


state 0

    0 $accept: . program $end

    IF            shift, and go to state 1
    WHILE         shift, and go to state 2
    FOR           shift, and go to state 3
    FUNCTION      shift, and go to state 4
    BREAK         shift, and go to state 5
    CONT          shift, and go to state 6
    RETURN        shift, and go to state 7
    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACE_L       shift, and go to state 16
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    SEMICOLON     shift, and go to state 19
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    $default  reduce using rule 2 (program)

    program       go to state 25
    stmtlist      go to state 26
    stmt          go to state 27
    breakstmt     go to state 28
    continuestmt  go to state 29
    returnstmt    go to state 30
    assignexpr    go to state 31
    arithmexpr    go to state 32
    relexpr       go to state 33
    boolexpr      go to state 34
    expr          go to state 35
    term          go to state 36
    primary       go to state 37
    lvalue        go to state 38
    member        go to state 39
    call          go to state 40
    tablemake     go to state 41
    block         go to state 42
    funcprefix    go to state 43
    funcdef       go to state 44
    number        go to state 45
    const         go to state 46
    ifprefix      go to state 47
    ifstmt        go to state 48
    whilestart    go to state 49
    whilestmt     go to state 50
    forprefix     go to state 51
    forstmt       go to state 52


state 1

   97 ifprefix: IF . PARENTH_L expr PARENTH_R

    PARENTH_L  shift, and go to state 53


state 2

  104 whilestart: WHILE .

    $default  reduce using rule 104 (whilestart)


state 3

  109 forprefix: FOR . PARENTH_L elist SEMICOLON M expr SEMICOLON

    PARENTH_L  shift, and go to state 54


state 4

   81 funcprefix: FUNCTION . funcname

    ID  shift, and go to state 55

    $default  reduce using rule 80 (funcname)

    funcname  go to state 56


state 5

   15 breakstmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 57


state 6

   16 continuestmt: CONT . SEMICOLON

    SEMICOLON  shift, and go to state 58


state 7

   17 returnstmt: RETURN . expr SEMICOLON
   18           | RETURN . SEMICOLON

    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    SEMICOLON     shift, and go to state 59
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    assignexpr  go to state 31
    arithmexpr  go to state 32
    relexpr     go to state 33
    boolexpr    go to state 34
    expr        go to state 60
    term        go to state 36
    primary     go to state 37
    lvalue      go to state 38
    member      go to state 39
    call        go to state 40
    tablemake   go to state 41
    number      go to state 45
    const       go to state 46


state 8

   42 term: NOT . expr

    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    assignexpr  go to state 31
    arithmexpr  go to state 32
    relexpr     go to state 33
    boolexpr    go to state 34
    expr        go to state 61
    term        go to state 36
    primary     go to state 37
    lvalue      go to state 38
    member      go to state 39
    call        go to state 40
    tablemake   go to state 41
    number      go to state 45
    const       go to state 46


state 9

   54 lvalue: LOCAL . ID

    ID  shift, and go to state 62


state 10

   94 const: TRUE .

    $default  reduce using rule 94 (const)


state 11

   95 const: FALSE .

    $default  reduce using rule 95 (const)


state 12

   96 const: NIL .

    $default  reduce using rule 96 (const)


state 13

   41 term: MINUS . expr

    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    assignexpr  go to state 31
    arithmexpr  go to state 32
    relexpr     go to state 33
    boolexpr    go to state 34
    expr        go to state 63
    term        go to state 36
    primary     go to state 37
    lvalue      go to state 38
    member      go to state 39
    call        go to state 40
    tablemake   go to state 41
    number      go to state 45
    const       go to state 46


state 14

   43 term: PLUS_PLUS . lvalue

    LOCAL         shift, and go to state 9
    PARENTH_L     shift, and go to state 64
    DOUBLE_COLON  shift, and go to state 20
    ID            shift, and go to state 23

    lvalue  go to state 65
    member  go to state 39
    call    go to state 66


state 15

   45 term: MINUS_MINUS . lvalue

    LOCAL         shift, and go to state 9
    PARENTH_L     shift, and go to state 64
    DOUBLE_COLON  shift, and go to state 20
    ID            shift, and go to state 23

    lvalue  go to state 67
    member  go to state 39
    call    go to state 66


state 16

   77 block: BRACE_L . @3 stmtlist BRACE_R
   78      | BRACE_L . BRACE_R

    BRACE_R  shift, and go to state 68

    $default  reduce using rule 76 (@3)

    @3  go to state 69


state 17

   71 tablemake: BRACKET_L . elist BRACKET_R
   72          | BRACKET_L . indexed BRACKET_R

    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACE_L       shift, and go to state 70
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    $default  reduce using rule 68 (elist)

    assignexpr   go to state 31
    arithmexpr   go to state 32
    relexpr      go to state 33
    boolexpr     go to state 34
    expr         go to state 71
    term         go to state 36
    primary      go to state 37
    lvalue       go to state 38
    member       go to state 39
    call         go to state 40
    elist        go to state 72
    tablemake    go to state 41
    indexed      go to state 73
    indexedelem  go to state 74
    number       go to state 45
    const        go to state 46


state 18

   40 term: PARENTH_L . expr PARENTH_R
   51 primary: PARENTH_L . funcdef PARENTH_R
   62 call: PARENTH_L . funcdef PARENTH_R PARENTH_L elist PARENTH_R

    FUNCTION      shift, and go to state 4
    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    assignexpr  go to state 31
    arithmexpr  go to state 32
    relexpr     go to state 33
    boolexpr    go to state 34
    expr        go to state 75
    term        go to state 36
    primary     go to state 37
    lvalue      go to state 38
    member      go to state 39
    call        go to state 40
    tablemake   go to state 41
    funcprefix  go to state 43
    funcdef     go to state 76
    number      go to state 45
    const       go to state 46


state 19

   14 stmt: SEMICOLON .

    $default  reduce using rule 14 (stmt)


state 20

   55 lvalue: DOUBLE_COLON . ID

    ID  shift, and go to state 77


state 21

   91 number: INT .

    $default  reduce using rule 91 (number)


state 22

   90 number: REAL .

    $default  reduce using rule 90 (number)


state 23

   53 lvalue: ID .

    $default  reduce using rule 53 (lvalue)


state 24

   92 const: STRING .

    $default  reduce using rule 92 (const)


state 25

    0 $accept: program . $end

    $end  shift, and go to state 78


state 26

    1 program: stmtlist .
    3 stmtlist: stmtlist . stmt

    IF            shift, and go to state 1
    WHILE         shift, and go to state 2
    FOR           shift, and go to state 3
    FUNCTION      shift, and go to state 4
    BREAK         shift, and go to state 5
    CONT          shift, and go to state 6
    RETURN        shift, and go to state 7
    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACE_L       shift, and go to state 16
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    SEMICOLON     shift, and go to state 19
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    $default  reduce using rule 1 (program)

    stmt          go to state 79
    breakstmt     go to state 28
    continuestmt  go to state 29
    returnstmt    go to state 30
    assignexpr    go to state 31
    arithmexpr    go to state 32
    relexpr       go to state 33
    boolexpr      go to state 34
    expr          go to state 35
    term          go to state 36
    primary       go to state 37
    lvalue        go to state 38
    member        go to state 39
    call          go to state 40
    tablemake     go to state 41
    block         go to state 42
    funcprefix    go to state 43
    funcdef       go to state 44
    number        go to state 45
    const         go to state 46
    ifprefix      go to state 47
    ifstmt        go to state 48
    whilestart    go to state 49
    whilestmt     go to state 50
    forprefix     go to state 51
    forstmt       go to state 52


state 27

    4 stmtlist: stmt .

    $default  reduce using rule 4 (stmtlist)


state 28

   10 stmt: breakstmt .

    $default  reduce using rule 10 (stmt)


state 29

   11 stmt: continuestmt .

    $default  reduce using rule 11 (stmt)


state 30

    9 stmt: returnstmt .

    $default  reduce using rule 9 (stmt)


state 31

   35 expr: assignexpr .

    $default  reduce using rule 35 (expr)


state 32

   37 expr: arithmexpr .

    $default  reduce using rule 37 (expr)


state 33

   38 expr: relexpr .

    $default  reduce using rule 38 (expr)


state 34

   39 expr: boolexpr .

    $default  reduce using rule 39 (expr)


state 35

    5 stmt: expr . SEMICOLON
   20 arithmexpr: expr . PLUS expr
   21           | expr . MINUS expr
   22           | expr . STAR expr
   23           | expr . SLASH expr
   24           | expr . PERC expr
   25 relexpr: expr . GREATER expr
   26        | expr . GREQ expr
   27        | expr . LESS expr
   28        | expr . LEQ expr
   29        | expr . EQ_EQ expr
   30        | expr . NEQ expr
   32 boolexpr: expr . OR @1 M expr
   34         | expr . AND @2 M expr

    AND        shift, and go to state 80
    OR         shift, and go to state 81
    PLUS       shift, and go to state 82
    MINUS      shift, and go to state 83
    STAR       shift, and go to state 84
    SLASH      shift, and go to state 85
    PERC       shift, and go to state 86
    EQ_EQ      shift, and go to state 87
    NEQ        shift, and go to state 88
    GREATER    shift, and go to state 89
    LESS       shift, and go to state 90
    GREQ       shift, and go to state 91
    LEQ        shift, and go to state 92
    SEMICOLON  shift, and go to state 93


state 36

   36 expr: term .

    $default  reduce using rule 36 (expr)


state 37

   47 term: primary .

    $default  reduce using rule 47 (term)


state 38

   19 assignexpr: lvalue . EQUAL expr
   44 term: lvalue . PLUS_PLUS
   46     | lvalue . MINUS_MINUS
   48 primary: lvalue .
   57 member: lvalue . DOT ID
   58       | lvalue . BRACKET_L expr BRACKET_R
   63 call: lvalue . callsuffix

    EQUAL        shift, and go to state 94
    PLUS_PLUS    shift, and go to state 95
    MINUS_MINUS  shift, and go to state 96
    BRACKET_L    shift, and go to state 97
    PARENTH_L    shift, and go to state 98
    DOT          shift, and go to state 99
    DOT_DOT      shift, and go to state 100

    $default  reduce using rule 48 (primary)

    callsuffix  go to state 101
    normcall    go to state 102
    methodcall  go to state 103


state 39

   56 lvalue: member .

    $default  reduce using rule 56 (lvalue)


state 40

   49 primary: call .
   59 member: call . DOT ID
   60       | call . BRACKET_L expr BRACKET_R
   61 call: call . PARENTH_L elist PARENTH_R

    BRACKET_L  shift, and go to state 104
    PARENTH_L  shift, and go to state 105
    DOT        shift, and go to state 106

    $default  reduce using rule 49 (primary)


state 41

   50 primary: tablemake .

    $default  reduce using rule 50 (primary)


state 42

   12 stmt: block .

    $default  reduce using rule 12 (stmt)


state 43

   89 funcdef: funcprefix . funcargs funcbody

    PARENTH_L  shift, and go to state 107

    funcargs  go to state 108


state 44

   13 stmt: funcdef .

    $default  reduce using rule 13 (stmt)


state 45

   93 const: number .

    $default  reduce using rule 93 (const)


state 46

   52 primary: const .

    $default  reduce using rule 52 (primary)


state 47

   99 ifstmt: ifprefix . stmt
  100       | ifprefix . stmt elseprefix stmt

    IF            shift, and go to state 1
    WHILE         shift, and go to state 2
    FOR           shift, and go to state 3
    FUNCTION      shift, and go to state 4
    BREAK         shift, and go to state 5
    CONT          shift, and go to state 6
    RETURN        shift, and go to state 7
    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACE_L       shift, and go to state 16
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    SEMICOLON     shift, and go to state 19
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    stmt          go to state 109
    breakstmt     go to state 28
    continuestmt  go to state 29
    returnstmt    go to state 30
    assignexpr    go to state 31
    arithmexpr    go to state 32
    relexpr       go to state 33
    boolexpr      go to state 34
    expr          go to state 35
    term          go to state 36
    primary       go to state 37
    lvalue        go to state 38
    member        go to state 39
    call          go to state 40
    tablemake     go to state 41
    block         go to state 42
    funcprefix    go to state 43
    funcdef       go to state 44
    number        go to state 45
    const         go to state 46
    ifprefix      go to state 47
    ifstmt        go to state 48
    whilestart    go to state 49
    whilestmt     go to state 50
    forprefix     go to state 51
    forstmt       go to state 52


state 48

    6 stmt: ifstmt .

    $default  reduce using rule 6 (stmt)


state 49

  106 whilestmt: whilestart . whilecond loopstmt

    PARENTH_L  shift, and go to state 110

    whilecond  go to state 111


state 50

    7 stmt: whilestmt .

    $default  reduce using rule 7 (stmt)


state 51

  110 forstmt: forprefix . N elist PARENTH_R N loopstmt N

    $default  reduce using rule 107 (N)

    N  go to state 112


state 52

    8 stmt: forstmt .

    $default  reduce using rule 8 (stmt)


state 53

   97 ifprefix: IF PARENTH_L . expr PARENTH_R

    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    assignexpr  go to state 31
    arithmexpr  go to state 32
    relexpr     go to state 33
    boolexpr    go to state 34
    expr        go to state 113
    term        go to state 36
    primary     go to state 37
    lvalue      go to state 38
    member      go to state 39
    call        go to state 40
    tablemake   go to state 41
    number      go to state 45
    const       go to state 46


state 54

  109 forprefix: FOR PARENTH_L . elist SEMICOLON M expr SEMICOLON

    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    $default  reduce using rule 68 (elist)

    assignexpr  go to state 31
    arithmexpr  go to state 32
    relexpr     go to state 33
    boolexpr    go to state 34
    expr        go to state 71
    term        go to state 36
    primary     go to state 37
    lvalue      go to state 38
    member      go to state 39
    call        go to state 40
    elist       go to state 114
    tablemake   go to state 41
    number      go to state 45
    const       go to state 46


state 55

   79 funcname: ID .

    $default  reduce using rule 79 (funcname)


state 56

   81 funcprefix: FUNCTION funcname .

    $default  reduce using rule 81 (funcprefix)


state 57

   15 breakstmt: BREAK SEMICOLON .

    $default  reduce using rule 15 (breakstmt)


state 58

   16 continuestmt: CONT SEMICOLON .

    $default  reduce using rule 16 (continuestmt)


state 59

   18 returnstmt: RETURN SEMICOLON .

    $default  reduce using rule 18 (returnstmt)


state 60

   17 returnstmt: RETURN expr . SEMICOLON
   20 arithmexpr: expr . PLUS expr
   21           | expr . MINUS expr
   22           | expr . STAR expr
   23           | expr . SLASH expr
   24           | expr . PERC expr
   25 relexpr: expr . GREATER expr
   26        | expr . GREQ expr
   27        | expr . LESS expr
   28        | expr . LEQ expr
   29        | expr . EQ_EQ expr
   30        | expr . NEQ expr
   32 boolexpr: expr . OR @1 M expr
   34         | expr . AND @2 M expr

    AND        shift, and go to state 80
    OR         shift, and go to state 81
    PLUS       shift, and go to state 82
    MINUS      shift, and go to state 83
    STAR       shift, and go to state 84
    SLASH      shift, and go to state 85
    PERC       shift, and go to state 86
    EQ_EQ      shift, and go to state 87
    NEQ        shift, and go to state 88
    GREATER    shift, and go to state 89
    LESS       shift, and go to state 90
    GREQ       shift, and go to state 91
    LEQ        shift, and go to state 92
    SEMICOLON  shift, and go to state 115


state 61

   20 arithmexpr: expr . PLUS expr
   21           | expr . MINUS expr
   22           | expr . STAR expr
   23           | expr . SLASH expr
   24           | expr . PERC expr
   25 relexpr: expr . GREATER expr
   26        | expr . GREQ expr
   27        | expr . LESS expr
   28        | expr . LEQ expr
   29        | expr . EQ_EQ expr
   30        | expr . NEQ expr
   32 boolexpr: expr . OR @1 M expr
   34         | expr . AND @2 M expr
   42 term: NOT expr .

    $default  reduce using rule 42 (term)


state 62

   54 lvalue: LOCAL ID .

    $default  reduce using rule 54 (lvalue)


state 63

   20 arithmexpr: expr . PLUS expr
   21           | expr . MINUS expr
   22           | expr . STAR expr
   23           | expr . SLASH expr
   24           | expr . PERC expr
   25 relexpr: expr . GREATER expr
   26        | expr . GREQ expr
   27        | expr . LESS expr
   28        | expr . LEQ expr
   29        | expr . EQ_EQ expr
   30        | expr . NEQ expr
   32 boolexpr: expr . OR @1 M expr
   34         | expr . AND @2 M expr
   41 term: MINUS expr .

    $default  reduce using rule 41 (term)


state 64

   62 call: PARENTH_L . funcdef PARENTH_R PARENTH_L elist PARENTH_R

    FUNCTION  shift, and go to state 4

    funcprefix  go to state 43
    funcdef     go to state 116


state 65

   43 term: PLUS_PLUS lvalue .
   57 member: lvalue . DOT ID
   58       | lvalue . BRACKET_L expr BRACKET_R
   63 call: lvalue . callsuffix

    BRACKET_L  shift, and go to state 97
    PARENTH_L  shift, and go to state 98
    DOT        shift, and go to state 99
    DOT_DOT    shift, and go to state 100

    $default  reduce using rule 43 (term)

    callsuffix  go to state 101
    normcall    go to state 102
    methodcall  go to state 103


state 66

   59 member: call . DOT ID
   60       | call . BRACKET_L expr BRACKET_R
   61 call: call . PARENTH_L elist PARENTH_R

    BRACKET_L  shift, and go to state 104
    PARENTH_L  shift, and go to state 105
    DOT        shift, and go to state 106


state 67

   45 term: MINUS_MINUS lvalue .
   57 member: lvalue . DOT ID
   58       | lvalue . BRACKET_L expr BRACKET_R
   63 call: lvalue . callsuffix

    BRACKET_L  shift, and go to state 97
    PARENTH_L  shift, and go to state 98
    DOT        shift, and go to state 99
    DOT_DOT    shift, and go to state 100

    $default  reduce using rule 45 (term)

    callsuffix  go to state 101
    normcall    go to state 102
    methodcall  go to state 103


state 68

   78 block: BRACE_L BRACE_R .

    $default  reduce using rule 78 (block)


state 69

   77 block: BRACE_L @3 . stmtlist BRACE_R

    IF            shift, and go to state 1
    WHILE         shift, and go to state 2
    FOR           shift, and go to state 3
    FUNCTION      shift, and go to state 4
    BREAK         shift, and go to state 5
    CONT          shift, and go to state 6
    RETURN        shift, and go to state 7
    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACE_L       shift, and go to state 16
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    SEMICOLON     shift, and go to state 19
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    stmtlist      go to state 117
    stmt          go to state 27
    breakstmt     go to state 28
    continuestmt  go to state 29
    returnstmt    go to state 30
    assignexpr    go to state 31
    arithmexpr    go to state 32
    relexpr       go to state 33
    boolexpr      go to state 34
    expr          go to state 35
    term          go to state 36
    primary       go to state 37
    lvalue        go to state 38
    member        go to state 39
    call          go to state 40
    tablemake     go to state 41
    block         go to state 42
    funcprefix    go to state 43
    funcdef       go to state 44
    number        go to state 45
    const         go to state 46
    ifprefix      go to state 47
    ifstmt        go to state 48
    whilestart    go to state 49
    whilestmt     go to state 50
    forprefix     go to state 51
    forstmt       go to state 52


state 70

   75 indexedelem: BRACE_L . expr COLON expr BRACE_R

    NOT           shift, and go to state 8
    LOCAL         shift, and go to state 9
    TRUE          shift, and go to state 10
    FALSE         shift, and go to state 11
    NIL           shift, and go to state 12
    MINUS         shift, and go to state 13
    PLUS_PLUS     shift, and go to state 14
    MINUS_MINUS   shift, and go to state 15
    BRACKET_L     shift, and go to state 17
    PARENTH_L     shift, and go to state 18
    DOUBLE_COLON  shift, and go to state 20
    INT           shift, and go to state 21
    REAL          shift, and go to state 22
    ID            shift, and go to state 23
    STRING        shift, and go to state 24

    assignexpr  go to state 31
    arithmexpr  go to state 32
    relexpr     go to state 33
    boolexpr    go to state 34
    expr        go to state 118
    term        go to state 36
    primary     go to state 37
    lvalue      go to state 38
    member      go to state 39
    call        go to state 40
    tablemake   go to state 41
    number      go to state 45
    const       go to state 46


state 71
